# video-translator

./: .flake8  .gitignore  .pre-commit-config.yaml  README.org  generate_subtitles.py  pyproject.toml  requirements-dev.txt  requirements.txt  translate_subtitles.py
.github/workflows/: build-package.yml  python-app.yml
docs/: build_package.org  development.org  virtual_environment.org
extract_subtitles/: extract_subtitles.py
extract_subtitles/utils/: extractor.py  mapper.py
generate_subtitles/: generate_subtitles.py
samples/: andrey_rublev_english_subtitle.srt  andrey_rublev_russian_subtitle.srt  english_subtitles.srt  leviathan.en.srt  leviathan.ru.srt
scripts/: __init__.py
transcribe_subtitles/: transcribe_subtitles.py
translate_subtitles/: translate_subtitles.py
translate_subtitles/tests/integration/: test_translate_subtitles.py
translate_subtitles/tests/unit/utils/: test_chunks.py  test_encoder.py  test_models.py  test_subtitle.py
translate_subtitles/tests/utils/: converter.py  test_chunks.py  test_encoder.py  test_models.py  test_subtitle.py
translate_subtitles/utils/: chunks.py  converter.py  encoder.py  progress.py  subtitle.py  translator.py
utils/: mapper.py  models.py  subtitle.py  subtitle_ocr.py  video_to_images.py
utils/media/: video_converter.py
utils/translation/: chunks.py  encoder.py  translator.py  validator.py
