[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "video-translator"
version = "0.0.1"
authors = [
  { name="Andrey Pudov", email="mail@andreypudov.com" }
]
description = "The collection of utils to translate the videos"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
"generate_subtitles" = "scripts:generate_subtitles"
"translate_subtitles" = "scripts:translate_subtitles"

[project.urls]
Homepage = "https://github.com/andreypudov/video-translator"
Issues = "https://github.com/andreypudov/video-translator/issues"

[tool.setuptools]
packages = [
  "generate_subtitles",
  "generate_subtitles.utils",
  "translate_subtitles",
  "translate_subtitles.utils",
  "scripts"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}