[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "video-translator"
version = "0.0.2"
authors = [
  { name="Andrey Pudov", email="mail@andreypudov.com" }
]
description = "The collection of command-line utils to translate videos"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
"extract_subtitles" = "extract_subtitles.extract_subtitles:main"
"transcribe_subtitles" = "transcribe_subtitles.transcribe_subtitles:main"
"translate_subtitles" = "translate_subtitles.translate_subtitles:main"

[project.urls]
Homepage = "https://github.com/andreypudov/video-translator"
Issues = "https://github.com/andreypudov/video-translator/issues"

[tool.setuptools]
packages = ["extract_subtitles", "transcribe_subtitles", "translate_subtitles"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}